# terminal-solitaire

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: solitaire.py
src/terminal_solitaire/: board.py  config.py  deck.py  game.py  game_board.py  hand.py  input_handler.py  renderer.py  rules.py  solitaire.py  stats.py  tableau.py
tests/: conftest.py  test_board.py  test_deck.py  test_game.py  test_rules.py  test_stats.py
