[tool.poetry]
name = "terminal_solitaire"
version = "0.1.0"
description = ""
authors = ["Joe M"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.1"

[tool.pytest.inioptions]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
