[project]
name = "terminal_solitaire"
version = "0.1.0"
description = "Solitaire for the terminal!"
authors = [{ name = "Joe M" }]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "blessed>=1.33.0",
    "rich>=14.3.3",
]

[project.scripts]
terminal-solitaire = "terminal_solitaire.solitaire:main"

[dependency-groups]
dev = ["black>=24.8.0,<25"]
test = ["pytest>=8.3.3,<9", "coverage>=7.6.1,<8", "pytest-cov>=5.0,<6"]

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terminal_solitaire"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
